--- a/default.css
+++ b/default.css
@@ -37,13 +37,14 @@ div, span, section, header, footer, p, a, nav {
 .s-tit {
 	padding: 0.3em 0;
 }
-@font-face {
-	font-family: 'Old London';
-	src: url('OldLondon.ttf') format('truetype'),
-	     url('Olondona.otf') format('opentype');
-}
 .main-copy-wrap {
 	font-weight: 100;
 	color: #000000;
 	font-family: 'Old London', 'Blackout', 'Times New Roman';
+}
+@font-face {
+  font-family: 'Old London';
+  src: url('OldLondon.ttf') format('truetype'),
+       url('Olondona.otf') format('opentype');
+  font-display: swap;
 }
