--- a/style.css
+++ b/style.css
@@ -58,31 +58,28 @@ body {
     overflow-x: hidden;
   }
   .main-copy {
-  display: flex;
-  white-space: nowrap;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.main-copy-wrap {
-  font-size: 6rem;
-  letter-spacing: 0px;
-  line-height: 1em;
-  padding-right: 0.3em;
-  animation: textLoop 24s linear infinite;
-  min-width: 100px; /* Example: Set a minimum width to prevent layout shifts */
-  min-height: 50px; /* Example: Set a minimum height to prevent layout shifts */
-  flex-shrink: 0; /* Ensure elements don't shrink */
-}
-
-@keyframes textLoop {
-  from {
-    transform: translateX(0%);
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    z-index: 1;
   }
-  to {
-    transform: translateX(-100%);
+  .main-copy-wrap {
+    font-size: 6rem;
+    letter-spacing: 0px;
+    line-height: 1em;
+    padding-right: 0.3em;
+    animation: textLoop 24s linear infinite;
   }
-}
+  @keyframes textLoop {
+    from {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+    to {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
   .section-con {
     width: 100%;
     height: 100%;
