--- a/default.css
+++ b/default.css
@@ -40,7 +40,7 @@ div, span, section, header, footer, p, a, nav {
 .main-copy-wrap {
 	font-weight: 100;
 	color: #000000;
-	font-family: 'Old London', 'Blackout', 'Times New Roman';
+	font-family: 'Old London', 'Times New Roman';
 }
 @font-face {
   font-family: 'Old London';
