--- a/default.css
+++ b/default.css
@@ -45,4 +45,5 @@ div, span, section, header, footer, p, a, nav {
 @font-face {
   font-family: 'Old London';
   src: url('OldLondon.ttf') format('truetype');
+  font-display: swap;
 }
