--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
     line-height: 1em;
     padding-right: 0.3em;
     animation: textLoop 24s linear infinite;
+    flex-shrink: 0;
   }
   @keyframes textLoop {
     from {
