--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@ footer,header,nav,section{display:block;}
 div,span,section,header,footer,p,a,nav{box-sizing:border-box;}
 .t-bold{font-weight:100;}
 .t-normal{font-weight:50;}
-.t-stroke-white{color:transparent;-webkit-text-stroke:1px #fff;letter-spacing:2px;}
+.t-stroke-white{color:transparent;-webkit-text-stroke:2px #fff;letter-spacing:2px;}
+.t-stroke-black{color:transparent;-webkit-text-stroke:2px #000000;letter-spacing:2px;}
 .t-left{text-align:left;}
 .t-right{text-align:right;}
 .t-center{text-align:center;}
 .s-tit{padding:0.3em 0;}
 .main-copy-wrap{font-weight:100;color:#000;font-family:'Old London','Blackout','Times New Roman';}
 @font-face{font-family:'Old London';src:url('Olondona.otf') format('opentype');font-display:swap;}
-body{margin:0;padding:0;overflow-x:hidden;font-family:'Times New Roman','gilroy','Urbanist','Noto Sans KR','sans-serif';font-size:0.8rem;font-weight:400;line-height:1.4em;color:#171010;background:#f1f1f1;}
+body{margin:0;padding:0;overflow-x:hidden;font-family:'Times New Roman','sans-serif';font-size:0.8rem;font-weight:400;line-height:1.4em;color:#171010;background:#f1f1f1;}
 header{position:fixed;width:100%;height:55px;top:0;left:0;padding:0 1rem;display:flex;align-items:center;z-index:50;}
 header h1{font-size:1.5rem;font-weight:50;}
 header h1 a{color:#171010;text-decoration:none;}
@@ -20,11 +21,11 @@ header h1 a{color:#171010;text-decoration:none;}
 .header-right{margin-left:auto;text-align:right;font-weight:50;}
 .button-round{padding:0.4em 0.7em;border-radius:1rem;border:1px solid #171010;color:#fff;background:#171010;}
 canvas{position:fixed;left:50%;transform:translate(-50%,0);bottom:0;height:70vh;}
-section{position:relative;width:100%;height:100vh;overflow-x:hidden;}
+section{position:relative;width:100%;height:100%;overflow:hidden;}
 .main-copy{display:flex;white-space:nowrap;overflow:hidden;z-index:1;}
 .main-copy-wrap{font-size:6rem;letter-spacing:0;line-height:1em;padding-right:0.3em;animation:textLoop 24s linear infinite;min-width:100px;min-height:50px;flex-shrink:0;}
 @keyframes textLoop{from{transform:translateX(0%);}to{transform:translateX(-100%);}}
-.section-con{width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;overflow-x:hidden;padding-top:3rem;}
+.section-con{width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;overflow-x:hidden;padding-top:3rem;margin-top:200px;}
 .section-inner{width:90%;max-width:1200px;}
 .section-inner-con{width:100%;margin:0.7rem 0;}
 .section-inner-con p{margin:0.7rem 0;}
@@ -65,6 +66,14 @@ section{position:relative;width:100%;height:100vh;overflow-x:hidden;}
 /* Media Queries from other files */
 @media (orientation:portrait){
     .main-sins-wrap span img{width:320px;margin:0 -50px -6px;}
+    #distort-image {
+        width: 100%;
+        height: 100%;
+        overflow-x:hidden;
+      }
+    .section-con{height:fit-content}
+    .team-copy{margin-right: 0px;;}
+    .team-copy{margin-left: 0px;;}
     canvas{height:100%;}}
 @media (orientation:landscape){
     canvas{height:100vh;width:100%;}
@@ -87,13 +96,13 @@ section{position:relative;width:100%;height:100vh;overflow-x:hidden;}
     .main-copy-wrap{font-size:12rem;}
     .main-key-wrap{font-size:2.7rem;}
     .main-con-wrap{font-size:4rem;}
-    .team-copy{margin:10vh;}
+    .team-copy{margin:1px;}
     .r-tit{font-size:1.2rem;}
     .member{margin-top:-50vh;}
     .member-con{width:650px;}
     .team-copy1-wrap,.team-copy2-wrap,.team-copy3-wrap{font-size:9rem;}
     .foot-copy{font-size:11vw;}}
-@media (min-width:1240px){.member{margin-top:-60vh;}}
+@media (min-width:1240px){.member{margin-top:-40vh;}}
 /* CSS from other files */
 .loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100;background:white;opacity:0;transition:0.5s;}
 .before-load .loading{opacity:1;}
